# cmake-lib-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: config.cmake  prerequisite.cmake
include/: lib.hpp
source/: lib.cpp
source/config/: library_config.h.in
tests/common/: config.cmake
tests/validation/: CMakeLists.txt
tests/validation/cmake/: targets.cmake
tests/validation/source/: main.cpp
